--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
 }
 
-
 /* nav bar */
 
 .navBar {
@@ -11,29 +10,40 @@
   margin: 0 5%;
 }
 .sideNav {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .navLink {
   text-decoration: none;
-  color: #2844B7;
+  color: #2844b7;
   padding: 5px;
 }
 .navLink:visited {
-    text-decoration: none;
-    color: #2844B7;
-  }
+  text-decoration: none;
+  color: #2844b7;
+}
 /* picture gallery */
 
 .pic {
   height: 120px;
   width: 200px;
   object-fit: cover;
-  
 }
 .gallery {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+
+/* home page */
+
+.titleBar {
+  height: 25px;
+  width: 100%;
+  color: white;
+  background-color: #2947ad;
+  font-size: 110%;
+  margin-bottom: 15px;
+  text-align: center;
 }
