--- a/src/App.css
+++ b/src/App.css
@@ -11,23 +11,24 @@ body {
 .logoDiv {
 }
 .logoImg {
+  padding-left: 20px;
   height: 50px;
   object-fit: cover;
 }
 .navBar {
   display: flex;
   justify-content: space-between;
-  /* margin: 10px 5% 10px 5%; */
 }
 .sideNav {
   display: flex;
   justify-content: flex-end;
+  margin-right: 20px;
 }
 
 .navLink {
   text-decoration: none;
   color: #2844b7;
-  padding: 5px;
+  padding: 10px 10px 0 10px;
 }
 .navLink:visited {
   text-decoration: none;
@@ -145,8 +146,11 @@ body {
 }
 
 /* media queries */
-@media screen and (min-width: 1000px) {
+@media screen and (max-width: 1000px) {
   .hamDiv {
-    display: inline-block;
+    display: block;
+  }
+  .sideNav {
+    display: none;
   }
 }
