--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@ body {
 }
 
 /* nav bar */
-.logoDiv {
-}
+
 .logoImg {
   padding-left: 20px;
   height: 50px;
@@ -43,6 +42,7 @@ body {
 }
 
 /* home page */
+
 .homepage {
   display: flex;
   flex-direction: column;
@@ -54,6 +54,12 @@ body {
   background-color: #2947ad;
   font-size: 125%;
   margin-bottom: 15px;
+  text-align: center;
+}
+
+/* bathroom page */
+
+.subLink {
   text-align: center;
 }
 /* picture gallery */
