--- a/src/App.css
+++ b/src/App.css
@@ -68,11 +68,13 @@ body {
   height: 120px;
   width: 200px;
   object-fit: cover;
+  padding: 10px;
 }
 .gallery {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding: 0 5%;
 }
 
 /* hamburger menu */
@@ -120,7 +122,6 @@ body {
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  margin-right: 10px;
   height: 24px;
   width: 24px;
 }
@@ -145,6 +146,7 @@ body {
 /* Wrapper for item list */
 .bm-item-list {
   color: white;
+  overflow-y: hidden;
 }
 
 /* Styling of overlay */
