--- a/src/App.css
+++ b/src/App.css
@@ -27,22 +27,29 @@ body {
 .navLink {
   text-decoration: none;
   font-weight: bold;
-  color: #2844b7;
+  color: #2947ad;
   padding: 10px 10px 0 10px;
 }
 .navLink:visited {
   text-decoration: none;
-  color: #2844b7;
-}
-.navLink:hover {
-  text-decoration: underline;
+  color: #2947ad;
 }
 .linkText {
   font-size: 14px;
+  padding: 2px;
+}
+.linkText:hover {
+  border-radius: 3px;
+  color: white;
+  background-color: #2947ad;
 }
 
 /* home page */
-
+.quote {
+  font-size: 25px;
+  text-align: center;
+  font-style: italic;
+}
 .homepage {
   display: flex;
   flex-direction: column;
@@ -68,7 +75,11 @@ body {
   height: 120px;
   width: 200px;
   object-fit: cover;
-  padding: 10px;
+  margin: 10px;
+}
+.pic:hover {
+  -webkit-box-shadow: 1px 1px 11px 1px black;
+  box-shadow: 1px 1px 11px 1px black;
 }
 .gallery {
   display: flex;
@@ -99,9 +110,11 @@ body {
   margin-bottom: 10px;
   color: white;
   transition: color 0.2s;
+  font-weight: bold;
 }
 
 /* Change color on hover */
+
 .bm-item:hover {
   text-decoration: underline;
 }
