--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ body {
   justify-content: flex-end;
   margin-right: 20px;
 }
-
 .navLink {
   text-decoration: none;
   font-weight: bold;
@@ -43,7 +42,15 @@ body {
   color: white;
   background-color: #2947ad;
 }
-
+.aLink {
+  text-decoration: none;
+  font-weight: bold;
+  background-color: #2947ad;
+  padding: 10px 10px 0 10px;
+}
+.aLink:visited {
+  color: white;
+}
 /* home page */
 .quote {
   font-size: 25px;
