--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ body {
   text-decoration: none;
   font-weight: bold;
   background-color: #2947ad;
+  /* background-color: #00244b; */
   padding: 12px 10px 0 10px;
   font-size: 14px;
 }
@@ -85,6 +86,7 @@ body {
   width: 100%;
   color: white;
   background-color: #2947ad;
+  /* background-image: linear-gradient(to right, #2947ad, #00244b); */
   font-size: 125%;
   margin-bottom: 15px;
   text-align: center;
@@ -213,6 +215,7 @@ main {
   } */
 
 .footerDiv {
+  /* background-image: linear-gradient(to bottom, #2947ad, #00244b); */
   background-color: #2947ad;
   position: absolute;
   bottom: 0;
