--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,12 @@ body {
 .navLink {
   text-decoration: none;
   font-weight: bold;
-  color: #2947ad;
+  color: #00244b;
   padding: 10px 10px 0 10px;
 }
 .navLink:visited {
   text-decoration: none;
-  color: #2947ad;
+  color: #00244b;
 }
 .linkText {
   font-size: 14px;
@@ -43,10 +43,10 @@ body {
 
 .linkText:hover {
   border-radius: 3px;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 8px 5px 8px;
   margin-top: 10px;
   color: white;
-  background-color: #2947ad;
+  background-color: #00244b;
 }
 
 /* contact link */
@@ -75,7 +75,7 @@ body {
   text-align: center;
   font-style: italic;
   margin-bottom: 10px;
-  color: #072854; 
+  color: #072854;
 }
 .homepage {
   display: flex;
@@ -87,7 +87,7 @@ body {
   width: 100%;
   color: white;
   /* background-color: #2947ad; */
-  background-image: linear-gradient(to right, #2947ad, #00244b); 
+  background-image: linear-gradient(to right, #2947ad, #00244b);
   font-size: 125%;
   margin-bottom: 15px;
   text-align: center;
@@ -114,7 +114,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 5px 5% 25px 5%;
+  padding: 5px 5% 100px 5%;
 }
 
 /* hamburger menu */
@@ -199,21 +199,21 @@ body {
 /* footer */
 
 main {
-  padding-bottom: 10rem;
+  padding-bottom: 20rem;
 }
 main::after {
-    content: "";
-    background: url("./Images/basement_bg_bw.jpg");
-    opacity: 0.4;
-    top: 70px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-    background-position: center;
-    background-size: cover;
-  }
+  content: "";
+  background: url("./Images/basement_bg_bw.jpg");
+  opacity: 0.4;
+  top: 70px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-position: center;
+  background-size: cover;
+}
 
 .footerDiv {
   background-image: linear-gradient(to bottom, #2947ad, #00244b);
@@ -221,17 +221,17 @@ main::after {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10rem;
+  height: 20rem;
   display: flex;
   justify-content: space-around;
 }
 .footLogoDiv {
-  margin-top: 1rem;
+  margin-top: 3rem;
   margin-left: 1rem;
   height: 8rem;
 }
 .footLogo {
-  top: 1rem;
+  top: 3rem;
   height: 3rem;
   object-fit: cover;
 }
@@ -241,14 +241,18 @@ main::after {
   font-size: 10px;
   margin-top: 8px;
 }
-.fbDiv {
-  text-decoration: none;
-  display: flex;
-}
 .fbPara:visited {
   color: white;
   text-decoration: none;
 }
+.fbPara:hover {
+  color: black;
+}
+.fbDiv {
+  text-decoration: none;
+  display: flex;
+}
+
 .fbLogo {
   margin: 5px 8px 0 0;
   height: 2rem;
@@ -265,16 +269,25 @@ main::after {
   color: white;
   margin: 30px 0 0 10px;
 }
-
+.myMapDiv {
+  margin: 15px 0 0 30px;
+  -webkit-box-shadow: 1px 1px 11px 1px black;
+  box-shadow: 1px 1px 11px 1px black;
+}
+.resDiv {
+  margin-top: 2rem;
+}
 .resources {
   color: white;
   font-size: 12px;
+  margin-left: 5px;
 }
 
 li {
   list-style-type: none;
 }
 .footLink {
+  line-height: 1.5;
   text-decoration: none;
   padding: 2px;
   color: white;
