installed lightbox pro

--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,14 @@ body {
 
 /* modal */
 
+.lbPic {
+  height: 100px;
+  width: 100px;
+}
+.scale-in-long {
+  
+}
+
 /* media queries */
 
 @media screen and (max-width: 1000px) {
