--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding: 5px 5% 100px 5%;
+    padding: 5px 5% 5% 5%;
   }
 
 /* -----------------hamburger menu----------------- */
@@ -220,12 +220,6 @@ body {
 /* .bm-overlay {
 } */
 
-/* modal */
-
-.lbPic {
-  height: 100px;
-  width: 100px;
-}
 
 /* media queries */
 
