--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@ body {
   margin: 0;
   padding: 0;
 }
-
-.app {
+* {
   box-sizing: border-box;
+}
+.app {
   position: relative;
   min-height: 100vh;
 }
@@ -72,7 +73,7 @@ body {
 /* home page */
 
 .quote {
-  font-size: 30px;
+  font-size: 32px;
   font-weight: 200;
   text-align: center;
   font-style: italic;
@@ -103,21 +104,21 @@ body {
 /* picture gallery */
 
 .pic {
-    height: 120px;
-    width: 200px;
-    object-fit: cover;
-    margin: 10px;
-  }
-  .pic:hover {
-    -webkit-box-shadow: 1px 1px 11px 1px #00244b;
-    box-shadow: 1px 1px 11px 1px #00244b;
-  }
-  .gallery {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 5px 5% 5% 5%;
-  }
+  height: 120px;
+  width: 200px;
+  object-fit: cover;
+  margin: 10px;
+}
+.pic:hover {
+  -webkit-box-shadow: 1px 1px 11px 1px #00244b;
+  box-shadow: 1px 1px 11px 1px #00244b;
+}
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 5px 5% 5% 5%;
+}
 
 /* -----------------hamburger menu----------------- */
 
@@ -219,7 +220,6 @@ body {
 /* Styling of overlay */
 /* .bm-overlay {
 } */
-
 
 /* media queries */
 
