--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ body {
 .aLink {
   text-decoration: none;
   font-weight: bold;
-  /* background-color: #2947ad; */
   background-color: #00244b;
   padding: 12px 10px 0 10px;
   font-size: 14px;
@@ -85,7 +84,7 @@ body {
   flex-direction: column;
 }
 .titleBar {
-  height: 25px;
+  height: 28px;
   padding: 2px 0 2px 0;
   width: 100%;
   color: white;
@@ -96,6 +95,40 @@ body {
   text-align: center;
 }
 
+/* phone */
+
+.phoneIcon {
+  margin-right: 10px;
+  color: #2947ad;
+}
+
+.phoneLink {
+  color: #00244b;
+  font-size: 23px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 2px;
+  border-radius: 10px;
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+.phoneLink:visited {
+  text-decoration: none;
+}
+.phoneLink:hover {
+  color: white;
+}
+.phoneDiv {
+  margin-bottom: 10px;
+}
+.phonePara {
+  color: #00244b;
+  font-size: 18px;
+  font-weight: lighter;
+  margin-bottom: 10px;
+}
 /* bathroom page */
 
 .subLink {
