--- a/src/App.css
+++ b/src/App.css
@@ -103,17 +103,16 @@ body {
 }
 
 .phoneLink {
+  display: flex;
+  justify-content: center;
   color: #00244b;
   font-size: 23px;
   font-weight: bold;
   text-decoration: none;
   padding: 2px;
   border-radius: 10px;
-  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
-    5px 5px 15px 5px rgba(0, 0, 0, 0);
-  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
-    5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
+
 .phoneLink:visited {
   text-decoration: none;
 }
