responsiveness for large screens, subtle A in burger menu

--- a/src/App.css
+++ b/src/App.css
@@ -245,6 +245,11 @@ body {
   color: white;
   overflow-y: hidden;
 }
+.makA {
+    margin: 20px 0 0 10px;
+    width: 130px;
+    opacity: .1;
+}
 /* .bm-item-list:focus {
   outline: none;
 } */
