--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -33,6 +33,17 @@
 .img-hover-zoom:hover img {
   transform: scale(1.5);
 }
+@media (min-width: 1200px) {
+  .wrapper {
+    margin: 0 5%;
+  }
+}
+@media (min-width: 1400px) {
+  .wrapper {
+    margin: 0 10%;
+  }
+}
+
 @media (max-width: 1100px) {
   .img-item {
     flex: 0.2 10 31%; /* 3 across */
