--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:display=swap");
+
 html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 * {
   box-sizing: border-box;
@@ -173,6 +177,16 @@ body {
   flex-wrap: wrap;
   padding: 8% 5% 10% 5%;
 }
+.descriptionDiv {
+  text-align: left;
+  padding: 1% 20%;
+  margin: 4% 0;
+  color: #00244b;
+  background: rgba(255, 255, 255, 0.3);
+}
+.dList {
+  list-style-type: disc;
+}
 
 /* -----------------hamburger menu----------------- */
 
@@ -329,5 +343,12 @@ body {
   }
   .phonePara {
     font-size: 14px;
+  }
+  .descriptionDiv {
+    text-align: left;
+    padding: 1% 10%;
+    margin: 4% 0;
+    color: #00244b;
+    background: rgba(255, 255, 255, 0.3);
   }
 }
