--- a/src/Footer.css
+++ b/src/Footer.css
@@ -119,6 +119,13 @@ li {
 .houzzWrap {
   display: flex;
 }
+.copyright {
+  font-size: 10px;
+  color: rgb(163, 163, 163);
+  margin-top: 35px;
+  margin-left: 45px;
+  margin-right: -45px;
+}
 @media screen and (max-width: 880px) {
   main {
     padding-bottom: 28rem;
