--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ body {
   flex-direction: column;
 }
 .titleBar {
-  height: 20px;
+  height: 24px;
   width: 100%;
   color: white;
   background-image: linear-gradient(to right, #2947ad, #00244b);
@@ -100,8 +100,10 @@ body {
   align-items: center;
 }
 .makA_rev {
-  height: 40px;
+  height: 50px;
   opacity: 0.1;
+  margin-top: -24px;
+  margin-bottom: -5px;
 }
 
 /* phone */
@@ -163,7 +165,7 @@ body {
 /* picture gallery */
 .subLinkDivPage {
   position: relative;
-  top: 2rem;
+  top: 1rem;
 }
 .pic {
   height: 130px;
