--- a/src/App.css
+++ b/src/App.css
@@ -302,11 +302,10 @@ body {
 
 .backImage {
   height: 25px;
-  opacity: 0.4;
-  background-color: white;
+  opacity: 0.7;
 }
 .backText {
-  color: #b6cbdd;
+  color: #2947ad;
   font-size: 8px;
   margin-top: 8px;
   text-transform: uppercase;
@@ -314,8 +313,8 @@ body {
 .BackButtonDiv {
   position: absolute;
   display: flex;
-  margin-top: -55px;
-  right: 0px;
+  margin-top: -25px;
+  left: 0px;
 }
 /* .bm-item-list:focus {
   outline: none;
