--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -10,6 +10,9 @@
   /* background: #fff; */
   margin-bottom: 0px;
 }
+.img-item:hover{
+    cursor: pointer;
+}
 /* .img-wrap {
   object-fit: cover;
 } */
